<resources>
    <string name="app_name">FoodDiary</string>

    <string name="title_activity_camera">CameraActivity</string>

    <!-- Display strings used by Nutrition Facts Label -->
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="serving_size">Serving Size</string>
    <string name="calories">Calories</string>
    <string name="total_fat">Total Fat</string>
    <string name="sat_fat">Saturated Fat</string>
    <string name="amt_per_serve">Amount per serving</string>
    <string name="daily_val">% Daily Value*</string>
    <string name="trans">Trans</string>
    <string name="fat">Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="totalcarbohydrate">Total Carbohydrate</string>
    <string name="fibre">Dietary Fibre</string>
    <string name="sugars">Sugars</string>
    <string name="protein">Protein</string>
    <string name="notedv">*Percent Daily Values are based on a 2,000 calorie diet. Your Daily Values may be higher or lower depending on your calorie needs.</string>

    <!--Preference string used by SplashActivity (Check if start IntroActivity) -->
    <string name="pref_previously_started">prevstart</string>

    <!-- Display strings used by SplashActivity and IntroActivity -->
    <string name="settingcomplete">Initial Settings complete! You may change the settings again under the settings tab.</string>
    <string name="poweredby">Powered by:</string>

    <!-- Display strings used by GetUserProfileFragment -->
    <string name="userprofiletitle">Set User Profile</string>
    <string name="gender">Gender:</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="age">Age: </string>
    <string name="agehint">Please provide your age.</string>
    <string name="height">Height: </string>
    <string name="weight">Weight: </string>

    <!-- Preference strings used by GetUserProfileFragment -->
    <string name="user_prof_sex">Sex</string>
    <string name="user_prof_age">Age</string>
    <string name="user_prof_height">Height</string>
    <string name="user_prof_weight">Weight</string>

    <!-- Display strings used by GetNutritionTrackFragment -->
    <string name="nutritiontracktitle">Set Health Monitors</string>
    <string name="getnutritiontrackdescription">What goals would you like to achieve? (Please check at least 1 option.)</string>
    <string name="weightloss">Weight Loss</string>
    <string name="healthconditiondesc">I have some health conditions I would like to track:</string>
    <string name="diabetes">Diabetes</string>
    <string name="hbpressure">High Blood Pressure</string>

    <!-- Preference strings used by GetNutritionTrackFragment -->
    <string name="nut_track_weightloss">weightloss</string>
    <string name="nut_track_diabetes">diabetes</string>

    <!-- Display strings used by MoreInfoFragment -->
    <string name="moreinfotitle">More Information</string>
    <string name="wtlosstarget">Please input your desired weight.</string>
    <string name="carbotarget">Please select the Low-Sugar diet you would like to embark on.</string>
    <string name="sodiumtarget">Please select the Low-Sodium diet you would like to embark on.</string>
    <string name="wtlossrecommendation">We recommend losing 0.45 to 0.9kg a week. Please key in an appropriate number of weeks.</string>
    <string name="stdsaltregime">Standard DASH diet (2,500mg Sodium limit)</string>
    <string name="recsaltregime">Recommended DASH diet (1,500mg Sodium limit)</string>
    <string name="customsaltregime">Custom Sodium limit (mg): </string>
    <string name="reccarbsregime">45g Carbs Limit (Recommended)</string>
    <string name="customcarbsregime">Custom Carbs Limit: </string>
    <string name="nouserprofilewarning">*Warning: No user profile has been keyed in. We are unable to calculate your weight loss regime accurately without this information.</string>

    <!-- Display strings used by SummaryFragment -->
    <string name="summarytitle">Summary</string>
    <string name="summarydesc">Your initial settings are as shown below:</string>
    <string name="wtloss_lackinfowarning">*Warning: Previous information was not keyed in properly. Defaults were used in computing the shown values, and may not be customised to your profile.</string>
    <string name="hbp_customwarning">*Warning: Custom option was chosen, but a value was not keyed in. Default values will be used.</string>
    <string name="diabetes_customwarning">Warning: Custom option was chosen, but a value was not keyed in. Default values will be used.</string>

    <!-- Preference strings used by MoreInfoFragment/ SummaryFragment/
     GetDefaultServingFragment-->
    <string name="calorielimit">calorielimit</string>
    <string name="DesiredWeight">DesiredWeight</string>
    <string name="DesiredWeightWks">DesiredWeightWks</string>
    <string name="diabetesregime">DiabetesRegime</string>
    <string name="customdiabetesregime">CustomDiabetesRegime</string>
    <string name="defaultservingsize">defaultservingsize</string>

    <!-- Display strings used by GetDefaultServingFragment -->
    <string name="defaultservingtitle">Default Serving Size</string>
    <string name="getdefaultservingdescription">Please enter your usual food portion. (For e.g., for a lunch meal, if you finish 1 plate, put 1)</string>

    <!-- Preference strings for setting TimePeriod (OLD) -->
    <!--
    <string name="breakfast_start_hour">breakfast_start_hour</string>
    <string name="breakfast_start_min">breakfast_start_min</string>
    <string name="breakfast_end_hour">breakfast_end_hour</string>
    <string name="breakfast_end_min">breakfast_end_min</string>
    <string name="lunch_start_hour">lunch_start_hour</string>
    <string name="lunch_start_min">lunch_start_min</string>
    <string name="lunch_end_hour">lunch_end_hour</string>
    <string name="lunch_end_min">lunch_end_min</string>
    <string name="dinner_start_hour">dinner_start_hour</string>
    <string name="dinner_start_min">dinner_start_min</string>
    <string name="dinner_end_hour">dinner_end_hour</string>
    <string name="dinner_end_min">dinner_end_min</string>
    -->

    <!-- Preference strings for setting TimePeriod -->
    <!-- Note: They are currently used (in Meal model) but not set. -->
    <string name="morning_start_hour">morning_start_hour</string>
    <string name="morning_start_min">morning_start_min</string>
    <string name="morning_end_hour">morning_end_hour</string>
    <string name="morning_end_min">morning_end_min</string>
    <string name="afternoon_start_hour">afternoon_start_hour</string>
    <string name="afternoon_start_min">afternoon_start_min</string>
    <string name="afternoon_end_hour">afternoon_end_hour</string>
    <string name="afternoon_end_min">afternoon_end_min</string>
    <string name="evening_start_hour">evening_start_hour</string>
    <string name="evening_start_min">evening_start_min</string>
    <string name="evening_end_hour">evening_end_hour</string>
    <string name="evening_end_min">evening_end_min</string>
    <string name="night_start_hour">night_start_hour</string>
    <string name="night_start_min">night_start_min</string>
    <string name="night_end_hour">night_end_hour</string>
    <string name="night_end_min">night_end_min</string>

    <!-- Display strings used by Report fragment -->
    <string name="congratulations">Congratulations!</string>
    <string name="cal">calories</string>
    <string name="congratContentnow">You are currently meeting your %s target for today!</string>
    <string name="congratContentother">You have met your %s target for today!</string>
    <string name="congratSubcontent">%d %s left to spare!</string>
    <string name="tryharder">Try Harder Next Time!</string>
    <string name="tryharderContent">You exceeded your %s target.</string>
    <string name="tryharderSubcontent">You exceeded by %d %s. Don\'t lose hope!</string>

    <string-array name="query_suggestions">
        <item>Teh Tarik</item>
        <item>North Indian Thali</item>
        <item>South Indian Thali</item>
    </string-array>
    <string name="title_activity_testact">Testact</string>

    <string name="manual_search">Manual Search</string>
    <string name="formtitle">Correction From</string>
    <string name="formhint">Correct Us</string>
    <string name="firsttime">firsttime</string>

    <string name="mealactivitydefaultservingsize">(Default Serving: %.2f)</string>
</resources>
